Made additional important changes and improvements.

--- a/locale/tracks.json
+++ b/locale/tracks.json
@@ -93,7 +93,7 @@
 	{
 		"id" : "7",
 		"src" : "audio/Dr.Vamp - genre .mp3",
-		"name" : "Dr.Vamp - Dr.Vamp - Genre? ",
+		"name" : "Dr.Vamp - Dr.Vamp - Don't Stop",
 		"title" : "Crew",
 		"volume" : "0",
 		"lease" : "$30",
