Updated audio track src to point to cloudinary.

--- a/locale/tracks.json
+++ b/locale/tracks.json
@@ -1,7 +1,7 @@
 [
 	{
 		"id" : "0",
-		"src" : "audio/Dr.Vamp - Cavi.mp3",
+		"src" : "http://res.cloudinary.com/www-drvaudio-com/video/upload/v1471477610/Dr.Vamp_-_Cavi_ktww3d.mp3",
 		"name" : "Dr.Vamp - Cavi",
 		"title" : "Dark Society",
 		"volume" : "0",
